--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -16,8 +16,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageViewFullMap"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="376dp"
         android:layout_marginTop="8dp"
@@ -26,7 +25,18 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinnerMapSelector"
-        />
+        >
+        <ImageView
+            android:id="@+id/imageViewFullMap"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+        <com.peisia.bgom.view.ImageViewFullMap
+            android:id="@+id/imageViewFullMapForDraw"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+    </FrameLayout>
 
     <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/adView"
